<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.geekbrains.converter.ConvertActivity"
    tools:showIn="@layout/activity_convert">

    <EditText
        android:id="@+id/celsiusValue"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/fahrenheitValue"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginTop="67dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsiusValue" />

    <TextView
        android:id="@+id/celsiusLabel"
        android:layout_width="56dp"
        android:layout_height="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/celsius"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fahrenheitLabel"
        android:layout_width="78dp"
        android:layout_height="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="99dp"
        android:text="@string/fahrenheit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsiusLabel" />

    <Button
        android:id="@+id/toFahrenheitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="72dp"
        android:layout_marginTop="11dp"
        android:onClick="onToFahrenheitClick"
        android:text="@string/to_fahrenheit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/celsiusValue" />

    <Space
        android:id="@+id/kilometers_convert_delimiter"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/fahrenheitValue" />

    <TextView
        android:id="@+id/tv_kilometers_per_hour_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/kilometers_per_hour_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/kilometers_convert_delimiter" />

    <EditText
        android:id="@+id/et_kilometers_per_hour_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/kilometers_convert_delimiter"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/bt_convert_to_meters_per_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginStart="72dp"
        android:onClick="onToMetersPerSecondClick"
        android:text="@string/convert_to_meters_per_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_kilometers_per_hour_value" />

    <TextView
        android:id="@+id/tv_meters_per_second_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meters_per_second_label"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_convert_to_meters_per_second" />

    <EditText
        android:id="@+id/et_meters_per_second_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/bt_convert_to_meters_per_second"
        app:layout_constraintRight_toRightOf="parent"/>

</android.support.constraint.ConstraintLayout>
